# morphomotion

./: CMakeLists.txt  ProjectHome.md
Arduino/mode_filter/: mode_filter.ino
Arduino/servo_controller_charArray_V11/: servo_controller_charArray_V11.ino
Arduino/servo_controller_charArray_V6/: servo_controller_charArray_V6.pde
Arduino/servo_controller_charArray_V8/: servo_controller_charArray_V8.ino
Controller/: Controller.cpp  Controller.h
Evaluation/: EvaluateController.cpp
Evolution/: Evolution.cpp  Evolution.h  EvolveController.cpp
FileHandler/: FileHandler.cpp  FileHandler.h
Flood/TrainingAlgorithm/: EvolutionaryAlgorithm.cpp
FourierController/: FourierController.cpp
GraphFile/: GraphFile.cpp  GraphFile.h
HybridController/: HybridController.cpp  HybridController.h
InverseSineController/: InverseSineController.cpp  InverseSineController.h  hybrid-controller.c
InverseSineController_V3/: InverseSineController_V3.cpp  InverseSineController_V3.h
OscillationAnalyzer_OutputSignal/: OscillationAnalyzer_OutputSignal.cpp  OscillationAnalyzer_OutputSignal.h
Robot/: Robot.cpp  Robot.h
SerialCommunication/: Communication_Protocol.odt  MessageFrame  SerialCommunication.c  SerialCommunication.h  SerialCommunicationEvaluator.cpp
ServoFeedback/: ServoFeedback.cpp  ServoFeedback.h
SimpleController/: SimpleController.cpp  SimpleController.h
SimulationOpenRave/: SimulationOpenRave.cpp  SimulationOpenRave.h
SineController/: SineController.cpp  SineController.h
TriangleSquareController/: TriangleSquareController.cpp
VisualTracker/: Colored_Marker.odt  VisualTracker.cpp  VisualTracker.h  VisualTrackerApplication.cpp
VisualTracker/camera_utils/: camera.yml
Y1ModularRobot/: Y1ModularRobot.cpp  Y1ModularRobot.h
miscellaneous/LinearRegression/: computeCostMulti.m  ex1.m  featureNormalize.m  gradientDescentMulti.m  octave-core  plotData.m
openmr/: CMakeLists.txt
trunk/: CMakeLists.txt  CMakeLists.txt~
trunk/Arduino/servo_controller_charArray_V10/: servo_controller_charArray_V10.ino
trunk/Arduino/servo_controller_charArray_V9/: servo_controller_charArray_V9.ino
trunk/Controller/: Controller.cpp  Controller.h
trunk/Evaluation/: EvaluateController.cpp  HOAP.cpp  NeuralModelEvaluator.cpp
trunk/Evolution/: Evolution.cpp  Evolution.h  EvolveController.cpp
trunk/ExtKalmanFilter_SinusModel/: ExtKalmanFilterEvaluator.cpp  ExtKalmanFilter_SinusModel.cpp  ExtKalmanFilter_SinusModel.h
trunk/FileHandler/: FileHandler.cpp  FileHandler.h
trunk/Flood/MultilayerPerceptron/: MultilayerPerceptron.cpp
trunk/Flood/ObjectiveFunctional/: ObjectiveFunctional.cpp  ObjectiveFunctional.h
trunk/Flood/TrainingAlgorithm/: EvolutionaryAlgorithm.cpp  EvolutionaryAlgorithm.h
trunk/FourierController/: FourierController.cpp  FourierController.h
trunk/GraphFile/: GraphFile.cpp
trunk/HybridController/: HybridController.h
trunk/InverseSineController/: InverseSineController.cpp  InverseSineController.h  functions.ods
trunk/InverseSineController_V2/: InverseSineController_V2.cpp  InverseSineController_V2.h
trunk/OscillationAnalyzer_OutputSignal/: OscillationAnalyzer_OutputSignal.cpp  OscillationAnalyzer_OutputSignal.h
trunk/Robot/: Robot.h
trunk/SerialCommunication/: Communication_Protocol.odt  MessageFrame  SerialCommunication.c  SerialCommunication.h  SerialCommunicationEvaluator.cpp  XBEEtoSkymegaWiring
trunk/ServoFeedback/: ServoFeedback.cpp  ServoFeedback.h
trunk/SimpleController/: SimpleController.cpp  SimpleController.h
trunk/SimulationOpenRave/: SimulationOpenRave.cpp  SimulationOpenRave.h
trunk/SineController/: SineController.cpp
trunk/TriangleSquareController/: TriangleSquareController.cpp  TriangleSquareController.h
trunk/VisualTracker/: VisualTracker.cpp  VisualTracker.h  VisualTrackerApplication.cpp
trunk/Y1ModularRobot/: Y1ModularRobot.cpp  Y1ModularRobot.h
trunk/miscellaneous/: plotScript.txt  servo_raw_data.ods
trunk/miscellaneous/LinearRegression/: normalEqn.m  octave-core  servo_data.csv
trunk/openmr/plugin/: servocontroller.h  sinoscontroller.h
